[FIX] hr_holidays: fix layout of the form view
Before this commit, the form view got messed up while attaching the file with
the long name.

In this commit, the width of the attached file has been adjusted to a fixed-size

task-3613301

--- a/addons/hr_holidays/static/src/scss/time_off.scss
+++ b/addons/hr_holidays/static/src/scss/time_off.scss
@@ -46,5 +46,11 @@
         .o_leave_stats {
             margin-bottom: 16px;
         }
+        .o_time_off_attachments {
+            .o_attachment {
+                width: 350px;
+                padding-left: 0;
+            }
+        }
     }
 }
